# rank-analysis

./: .gitattributes  .gitignore  ARCHITECTURE.md  BLOG.draft.md  CLAUDE.md  CODE_QUALITY.md  CONTRIBUTING.md  README.md  README.zh-CN.md  package-lock.json  package.json
lol-record-analysis-tauri/src-tauri/: .gitignore  2  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  user_tags.json
lol-record-analysis-tauri/src-tauri/capabilities/: default.json
lol-record-analysis-tauri/src-tauri/examples/: probe_arena.rs
lol-record-analysis-tauri/src-tauri/src/: automation.rs  cn_patch_notes.rs  command.rs  config.rs  constant.rs  game_state_monitor.rs  lib.rs  main.rs  observability.rs  rule_engine.rs  state.rs
lol-record-analysis-tauri/src-tauri/src/automation/: mod.rs
lol-record-analysis-tauri/src-tauri/src/command/: ai.rs  cloud_sync.rs  config.rs  fandom.rs  info.rs  launcher.rs  match_history.rs  match_hostory.rs  mod.rs  opgg.rs  rank.rs  rule_config.rs  session.rs  sgp.rs  system.rs  user_tag.rs  user_tag_config.rs
lol-record-analysis-tauri/src-tauri/src/constant/: api.rs  game.rs  mod.rs
lol-record-analysis-tauri/src-tauri/src/fandom/: api.rs  data.rs
lol-record-analysis-tauri/src-tauri/src/ipc/: mod.rs
lol-record-analysis-tauri/src-tauri/src/lcu/: api.rs  listener.rs  mod.rs
lol-record-analysis-tauri/src-tauri/src/lcu/api/: asset.rs  champion_select.rs  eog_stats.rs  game_detail.rs  lobby.rs  match_history.rs  mod.rs  model.rs  phase.rs  rank.rs  session.rs  sgp.rs  (+1 more)
lol-record-analysis-tauri/src-tauri/src/opgg/: api.rs  cache.rs  data.rs  mod.rs
(+320 files in other folders)
