[package]
name = "lol-record-analysis-app"
authors = ["wnzzer"]
edition = "2021"

[lib]
name = "lol_record_analysis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1.10.3"
reqwest = { version = "0.11", features = [
    "json",
] } # http client 用于访问 lcu 接口的客户端
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "psapi",
    "winbase",
    "minwindef",
    "ntdef",
    "libloaderapi",
    "memoryapi",
    "winnt",
] } # 用于 Windows api，用于获取lol进程信息
log = "0.4.0"
env_logger = "0.9"
base64 = "0.21"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
moka = { version = "0.12", features = ["future"] }
phf = { version = "0.12", features = ["macros"] } # 用于静态配置编译期生成
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3" # 用于 URL 编码
tauri-plugin-updater = "2.9.0"
mlua = { version = "0.9", features = ["lua54", "vendored", "async"] }
scraper = "0.22"
